fix about padding on mobile & img size

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,15 @@ body {
   padding: 0;
   height: 100%;
   width: 100vw;
+  max-width: 100vw;
   font-size: 1rem;
   font-family: "Montserrat", sans-serif;
   box-sizing: border-box;
   scroll-behavior: smooth;
+}
+
+.container-fluid {
+  max-width: 100vw;
 }
 
 a {
@@ -88,8 +93,12 @@ label {
 /* About */
 
 .about img {
-  max-height: 300px;
+  max-height: 1000px;
   max-width: 100%;
+}
+
+.about .about-info {
+  line-height: 2;
 }
 /* .about img {
   margin: 0;
@@ -99,6 +108,10 @@ label {
 } */
 
 /* Gallery */
+
+.gallery {
+  margin-top: -4rem;
+}
 
 .gallery .container-fluid {
   background-color: rgba(230, 230, 230, 1);
